<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background">

    <!-- Glowing effect behind logo -->
    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_decoration"
        android:backgroundTint="@color/lime_green"
        android:alpha="0.15"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/tv_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/stack_sans_text"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/stack_sans_text"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_security"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <ImageView
        android:id="@+id/iv_security"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:contentDescription="Security Icons"
        android:src="@drawable/ic_security_features"
        android:alpha="0.6"
        app:layout_constraintBottom_toTopOf="@+id/pb_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_slogan" />

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:indeterminate="true"
        android:progressTint="@color/lime_green"
        app:layout_constraintBottom_toTopOf="@+id/tv_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/stack_sans_text"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>